fix(Contacts): Remove margins to prevent items from covering each other.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1082,6 +1082,9 @@ compose #fieldFrom .mat-form-field-wrapper, compose .fieldRecipient .mat-form-fi
     }
 }
 
+.contactList .contactName p {
+    margin: 0;
+}
 
 
 /* Calendar */
